polish the mlpmodel-cleanup changes; PEP 8 compliance and similar

--- a/examples/MNIST.ipynb
+++ b/examples/MNIST.ipynb
@@ -150,7 +150,7 @@
     "        h = self.nn(X)\n",
     "        mean = self.h2mean(h)\n",
     "        logvar = self.h2logvar(h)\n",
-    "        return beer.NormalDiagonalCovariance_MLP(mean, logvar.exp())\n",
+    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())\n",
     "\n",
     "class Decoder(nn.Module):\n",
     "    def __init__(self, hidden_dim):\n",
@@ -164,7 +164,7 @@
     "    def forward(self, X):\n",
     "        h = self.nn(X)\n",
     "        logit = self.h2mu(h)\n",
-    "        return beer.Bernoulli_MLP(F.sigmoid(logit))"
+    "        return beer.BernoulliMLP(F.sigmoid(logit))"
    ]
   },
   {
