--- a/examples/VAE-GLC.ipynb
+++ b/examples/VAE-GLC.ipynb
@@ -115,19 +115,21 @@
     "# Dimension of the observed space.\n",
     "obs_dim = data.shape[1]\n",
     "\n",
-    "# Dimension of the latent space. It can be bigger or smaller\n",
-    "# than the dimension of the observed space.\n",
-    "latent_dim = 2\n",
+    "# Dimension of the latent space. In this example, it is equal to the \n",
+    "# dimension of the observed space for ease of visualisation.\n",
+    "# We also exploit it for a direct skip-connection from input\n",
+    "# to the mean.\n",
+    "latent_dim = obs_dim\n",
     "\n",
     "# Number of units per hidden-layer.\n",
     "n_units = 20\n",
     "\n",
-    "class EncDec(nn.Module):\n",
-    "    def __init__(self, structure):\n",
+    "class GaussianMLP(nn.Module):\n",
+    "    def __init__(self, structure, space_dim):\n",
     "        super().__init__()\n",
     "        self.nn = structure\n",
-    "        self.h2mean = nn.Linear(n_units, latent_dim)\n",
-    "        self.h2logvar = nn.Linear(n_units, latent_dim)\n",
+    "        self.h2mean = nn.Linear(n_units, space_dim)\n",
+    "        self.h2logvar = nn.Linear(n_units, space_dim)\n",
     "    \n",
     "        self.h2logvar.bias.data += -1.0 # init with small (log)variance\n",
     "            \n",
@@ -135,7 +137,7 @@
     "        h = self.nn(X)\n",
     "        mean = self.h2mean(h)\n",
     "        logvar = self.h2logvar(h)\n",
-    "        return beer.NormalDiagonalCovariance_MLP(mean + X, logvar.exp())\n",
+    "        return beer.NormalDiagonalCovarianceMLP(mean + X, logvar.exp())\n",
     "\n",
     "# Neural network structure of the encoder/decoder of the model.\n",
     "enc_struct = nn.Sequential(\n",
@@ -184,8 +186,8 @@
     "# ----------------------------------------------------------------------\n",
     "\n",
     "# Putting everything together to build the SVAE.\n",
-    "model = beer.VAE(EncDec(enc_struct), EncDec(dec_struct), latent_model, nsamples=15)\n",
-    "elbos = []\n"
+    "model = beer.VAE(GaussianMLP(enc_struct, obs_dim), GaussianMLP(dec_struct, obs_dim), latent_model, nsamples=15)\n",
+    "elbos = []"
    ]
   },
   {
