Created subclass of Mixture to have a specific PLDA model.

--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -139,8 +139,41 @@
     "weights = torch.ones(ncomps) / ntargets\n",
     "pseudo_counts = 1.\n",
     "\n",
-    "pldaset = beer.PLDA.create(mean, prec, noise_s, class_s, means, pseudo_counts)\n",
-    "plda = beer.Mixture.create(weights, pldaset, pseudo_counts)"
+    "plda = beer.PLDA.create(mean, prec, noise_s, class_s, means, weights, \n",
+    "                           pseudo_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = torch.from_numpy(data).float()\n",
+    "stats = plda.sufficient_statistics(X)\n",
+    "plda(stats)\n",
+    "resps = torch.ones(len(X), ncomps) / ncomps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "means = plda.modelset.cache['means']\n",
+    "prec = plda.modelset.cache['prec']\n",
+    "log_prec = plda.modelset.cache['log_prec']\n",
+    "lnorm = plda.modelset.cache['lnorm']\n",
+    "\n",
+    "broadcasting_array = torch.ones(len(resps), obs_dim) / obs_dim\n",
+    "np1 = -.5 * prec * broadcasting_array\n",
+    "np2 = prec * (resps.t()[:, :, None] * means).sum(dim=0)\n",
+    "np3 = -.5 * (lnorm.t() * resps).sum(dim=-1).view(-1, 1) * broadcasting_array\n",
+    "np4 = .5 * log_prec * broadcasting_array\n",
+    "\n",
+    "nparams = torch.cat([np1, np2, np3, np4], dim=-1).detach()\n",
+    "resps.t().shape, means.shape, (resps.t()[:, :, None] * means).shape"
    ]
   },
   {
