PLDA properly working with / without VAE.

--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -68,17 +68,17 @@
     "labels = []\n",
     "cov = np.array([[2, -1], [-1, 1]])\n",
     "\n",
-    "mean = 5 * np.array([1, 1])\n",
+    "mean = 5 * np.array([1, 1]) + 100\n",
     "X = np.random.multivariate_normal(mean, cov, size=N)\n",
     "labels.append(np.ones(len(X)) * 0)\n",
     "Xs.append(X)\n",
     "\n",
-    "mean = 3 * np.array([0, 0])\n",
+    "mean = 3 * np.array([0, 0]) + 100\n",
     "X = np.random.multivariate_normal(mean, cov, size=N)\n",
     "labels.append(np.ones(len(X)))\n",
     "Xs.append(X)\n",
     "\n",
-    "mean = 5 * np.array([-1, -1])\n",
+    "mean = 5 * np.array([-1, -1]) + 100\n",
     "X = np.random.multivariate_normal(mean, cov, size=N)\n",
     "labels.append(np.ones(len(X)) * 2)\n",
     "Xs.append(X)\n",
@@ -94,8 +94,8 @@
     "labels = labels[:-100]\n",
     "\n",
     "\n",
-    "x_range = (-10, 10)\n",
-    "y_range = (-10, 10)\n",
+    "x_range = (90, 110)\n",
+    "y_range = (90, 110)\n",
     "\n",
     "fig = figure(title='Synthetic data', width=400, height=400, x_range=x_range,\n",
     "             y_range=y_range)\n",
@@ -131,49 +131,17 @@
     "class_s_dim = 1\n",
     "\n",
     "# Mean of the prior distributions.\n",
-    "mean = torch.zeros(obs_dim)\n",
+    "mean = torch.zeros(obs_dim).double() + 10\n",
     "prec = 1.\n",
-    "noise_s = torch.randn(noise_s_dim, obs_dim)\n",
-    "class_s = torch.randn(class_s_dim, obs_dim)\n",
-    "means = 2 * torch.randn(ncomps, class_s_dim)\n",
-    "weights = torch.ones(ncomps) / ntargets\n",
+    "noise_s = torch.randn(noise_s_dim, obs_dim).double()\n",
+    "class_s = torch.randn(class_s_dim, obs_dim).double()\n",
+    "means = 2 * torch.randn(ncomps, class_s_dim).double()\n",
+    "weights = torch.ones(ncomps).double() / ntargets\n",
     "pseudo_counts = 1.\n",
     "\n",
-    "plda = beer.PLDA.create(mean, prec, noise_s, class_s, means, weights, \n",
-    "                           pseudo_counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = torch.from_numpy(data).float()\n",
-    "stats = plda.sufficient_statistics(X)\n",
-    "plda(stats)\n",
-    "resps = torch.ones(len(X), ncomps) / ncomps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "means = plda.modelset.cache['means']\n",
-    "prec = plda.modelset.cache['prec']\n",
-    "log_prec = plda.modelset.cache['log_prec']\n",
-    "lnorm = plda.modelset.cache['lnorm']\n",
-    "\n",
-    "broadcasting_array = torch.ones(len(resps), obs_dim) / obs_dim\n",
-    "np1 = -.5 * prec * broadcasting_array\n",
-    "np2 = prec * (resps.t()[:, :, None] * means).sum(dim=0)\n",
-    "np3 = -.5 * (lnorm.t() * resps).sum(dim=-1).view(-1, 1) * broadcasting_array\n",
-    "np4 = .5 * log_prec * broadcasting_array\n",
-    "\n",
-    "nparams = torch.cat([np1, np2, np3, np4], dim=-1).detach()\n",
-    "resps.t().shape, means.shape, (resps.t()[:, :, None] * means).shape"
+    "pldaset = beer.PLDASet.create(mean, prec, noise_s, class_s, means, \n",
+    "                              pseudo_counts)\n",
+    "plda = beer.Mixture.create(weights, pldaset)"
    ]
   },
   {
@@ -193,7 +161,7 @@
    "source": [
     "epochs = 50\n",
     "lrate = 1.\n",
-    "X = torch.from_numpy(data).float()\n",
+    "X = torch.from_numpy(data).double()\n",
     "targets = torch.from_numpy(labels).long()\n",
     "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "optimizer = beer.BayesianModelCoordinateAscentOptimizer(\n",
@@ -215,6 +183,15 @@
     "fig.line(np.arange(len(elbos)), elbos, color='blue')\n",
     "\n",
     "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plda.modelset.mean"
    ]
   },
   {
