Fixed bug in PLDA when having D dimension class subspace (D>1).

--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -63,22 +63,26 @@
    "outputs": [],
    "source": [
     "ntargets = 3\n",
-    "N = 200\n",
+    "N = 500\n",
     "Xs = []\n",
     "labels = []\n",
-    "cov = np.array([[2, -1], [-1, 1]])\n",
+    "cov = np.array([\n",
+    "    [1, -.5],\n",
+    "    [-.5, 3], \n",
+    "])\n",
     "\n",
-    "mean = 5 * np.array([1, 1]) + 100\n",
+    "shift = 100\n",
+    "mean = 5 * np.array([1, .25]) + shift\n",
     "X = np.random.multivariate_normal(mean, cov, size=N)\n",
     "labels.append(np.ones(len(X)) * 0)\n",
     "Xs.append(X)\n",
     "\n",
-    "mean = 3 * np.array([0, 0]) + 100\n",
+    "mean = 3 * np.array([0, 0]) + shift\n",
     "X = np.random.multivariate_normal(mean, cov, size=N)\n",
     "labels.append(np.ones(len(X)))\n",
     "Xs.append(X)\n",
     "\n",
-    "mean = 5 * np.array([-1, -1]) + 100\n",
+    "mean = 5 * np.array([-1, -.25]) + shift\n",
     "X = np.random.multivariate_normal(mean, cov, size=N)\n",
     "labels.append(np.ones(len(X)) * 2)\n",
     "Xs.append(X)\n",
@@ -94,8 +98,8 @@
     "labels = labels[:-100]\n",
     "\n",
     "\n",
-    "x_range = (90, 110)\n",
-    "y_range = (90, 110)\n",
+    "x_range = (shift - 10, shift + 10)\n",
+    "y_range = (shift - 10, shift + 10)\n",
     "\n",
     "fig = figure(title='Synthetic data', width=400, height=400, x_range=x_range,\n",
     "             y_range=y_range)\n",
@@ -128,14 +132,14 @@
     "noise_s_dim = 1\n",
     "\n",
     "# Dimension of the class subspace.\n",
-    "class_s_dim = 1\n",
+    "class_s_dim = 5\n",
     "\n",
     "# Mean of the prior distributions.\n",
-    "mean = torch.zeros(obs_dim).double() + 10\n",
+    "mean = torch.from_numpy(data.mean(axis=0)).double()\n",
     "prec = 1.\n",
     "noise_s = torch.randn(noise_s_dim, obs_dim).double()\n",
     "class_s = torch.randn(class_s_dim, obs_dim).double()\n",
-    "means = 2 * torch.randn(ncomps, class_s_dim).double()\n",
+    "means = torch.zeros(ncomps, class_s_dim).double()\n",
     "weights = torch.ones(ncomps).double() / ntargets\n",
     "pseudo_counts = 1.\n",
     "\n",
@@ -159,13 +163,15 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 50\n",
+    "epochs = 100\n",
     "lrate = 1.\n",
     "X = torch.from_numpy(data).double()\n",
     "targets = torch.from_numpy(labels).long()\n",
     "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "optimizer = beer.BayesianModelCoordinateAscentOptimizer(\n",
-    "    *plda.grouped_parameters, lrate=lrate)\n",
+    "    *plda.grouped_parameters, \n",
+    "    lrate=lrate\n",
+    ")\n",
     "\n",
     "elbos = []\n",
     "for epoch in range(epochs):\n",
@@ -176,6 +182,7 @@
     "    \n",
     "    if epochs > 0:\n",
     "        elbos.append(float(elbo) / len(X))\n",
+    "        #print(plda.modelset.class_subspace)\n",
     "    \n",
     "# Plot the ELBO.\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
@@ -183,15 +190,6 @@
     "fig.line(np.arange(len(elbos)), elbos, color='blue')\n",
     "\n",
     "show(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plda.modelset.mean"
    ]
   },
   {
