--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -58,24 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "math.e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linspace(0, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -184,8 +166,9 @@
     "n_units = 20\n",
     "\n",
     "class GaussianMLP(nn.Module):\n",
-    "    def __init__(self, structure, space_dim):\n",
+    "    def __init__(self, structure, space_dim, residual=False):\n",
     "        super().__init__()\n",
+    "        self.residual = residual\n",
     "        self.nn = structure\n",
     "        self.h2mean = nn.Linear(n_units, space_dim)\n",
     "        self.h2logvar = nn.Linear(n_units, space_dim)\n",
@@ -195,8 +178,11 @@
     "    def forward(self, X):\n",
     "        h = self.nn(X)\n",
     "        mean = self.h2mean(h)\n",
+    "        if self.residual:\n",
+    "            mean += X\n",
     "        logvar = self.h2logvar(h)\n",
-    "        return beer.NormalDiagonalCovarianceMLP(mean + X, logvar.exp())\n",
+    "        \n",
+    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())\n",
     "\n",
     "# Neural network structure of the encoder/decoder of the model.\n",
     "enc_struct = nn.Sequential(\n",
@@ -244,7 +230,9 @@
     "# ----------------------------------------------------------------------\n",
     "\n",
     "# Putting everything together to build the SVAE.\n",
-    "model = beer.VAE(GaussianMLP(enc_struct, obs_dim), GaussianMLP(dec_struct, obs_dim), plda, nsamples=5)"
+    "model = beer.VAE(GaussianMLP(enc_struct, obs_dim, residual=True), \n",
+    "                 GaussianMLP(dec_struct, obs_dim, residual=True), \n",
+    "                 plda, nsamples=5)"
    ]
   },
   {
@@ -299,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = 50 \n",
+    "d = 200\n",
     "enc_state = model.encoder(X[:d])\n",
     "mean, var = enc_state.mean.data.numpy(), enc_state.var.data.numpy()\n",
     "fig1 = figure(width=400, height=400)\n",
