Fixed stability issues when training PLDA.

--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "ntargets = 3\n",
-    "N = 500\n",
+    "N = 100\n",
     "Xs = []\n",
     "labels = []\n",
     "cov = np.array([\n",
@@ -129,10 +129,10 @@
     "obs_dim = data.shape[1]\n",
     "\n",
     "# Dimension of the noise subspace.\n",
-    "noise_s_dim = 1\n",
+    "noise_s_dim = obs_dim - 1\n",
     "\n",
     "# Dimension of the class subspace.\n",
-    "class_s_dim = 5\n",
+    "class_s_dim = ncomps - 1\n",
     "\n",
     "# Mean of the prior distributions.\n",
     "mean = torch.from_numpy(data.mean(axis=0)).double()\n",
@@ -190,6 +190,15 @@
     "fig.line(np.arange(len(elbos)), elbos, color='blue')\n",
     "\n",
     "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.zeros(2, dtype=mean.dtype)"
    ]
   },
   {
