--- a/examples/VAE-PPCA.ipynb
+++ b/examples/VAE-PPCA.ipynb
@@ -90,43 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = torch.from_numpy(data).float()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "hidden_dim = 20\n",
-    "\n",
-    "class GaussianMLP(nn.Module):\n",
-    "    def __init__(self, in_dim, out_dim, hidden_dim):\n",
-    "        super().__init__()\n",
-    "        self.seq = torch.nn\n",
-    "        self.i2h = torch.nn.Linear(in_dim, hidden_dim)\n",
-    "        self.h2h = torch.nn.Linear(hidden_dim, hidden_dim)\n",
-    "        self.h2mean = nn.Linear(hidden_dim, out_dim)\n",
-    "        self.nonlinear_transform = torch.nn.Tanh()\n",
-    "        self.h2logvar = nn.Linear(hidden_dim, out_dim)\n",
-    "        \n",
-    "    def forward(self, X):\n",
-    "        h = self.nonlinear_transform(self.i2h(X))\n",
-    "        h = self.nonlinear_transform(self.h2h(h))\n",
-    "        mean = self.h2mean(h) + X\n",
-    "        logvar = self.h2logvar(h)\n",
-    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "torch.manual_seed(9)\n",
     "observed_dim = 2\n",
     "latent_dim1 = 2\n",
@@ -134,12 +97,51 @@
     "latent_normal = beer.PPCA.create(\n",
     "    torch.zeros(latent_dim1), 1., torch.eye(latent_dim2, latent_dim1)\n",
     ")\n",
+    "\n",
+    "# Number of units per hidden-layer.\n",
+    "n_units = 20\n",
+    "\n",
+    "class GaussianMLP(nn.Module):\n",
+    "    def __init__(self, structure, space_dim, residual=False):\n",
+    "        super().__init__()\n",
+    "        self.residual = residual\n",
+    "        self.nn = structure\n",
+    "        self.h2mean = nn.Linear(n_units, space_dim)\n",
+    "        self.h2logvar = nn.Linear(n_units, space_dim)\n",
+    "    \n",
+    "        self.h2logvar.bias.data += -1.0 # init with small (log)variance\n",
+    "            \n",
+    "    def forward(self, X):\n",
+    "        h = self.nn(X)\n",
+    "        mean = self.h2mean(h)\n",
+    "        if self.residual:\n",
+    "            mean += X\n",
+    "        logvar = self.h2logvar(h)\n",
+    "        \n",
+    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())\n",
+    "\n",
+    "    \n",
+    "# Neural network structure of the encoder/decoder of the model.\n",
+    "enc_struct = nn.Sequential(\n",
+    "    nn.Linear(observed_dim, n_units),\n",
+    "    nn.Tanh(),\n",
+    "    nn.Linear(n_units, n_units),\n",
+    "    nn.Tanh(),\n",
+    ")\n",
+    "\n",
+    "dec_struct = nn.Sequential(\n",
+    "    nn.Linear(observed_dim, n_units),\n",
+    "    nn.Tanh(),\n",
+    "    nn.Linear(n_units, n_units),\n",
+    "    nn.Tanh(),\n",
+    ")\n",
+    "\n",
     "#latent_normal = beer.NormalDiagonalCovariance.create(\n",
     "#    torch.zeros(latent_dim1), torch.ones(latent_dim1)\n",
     "#)\n",
     "vae_ppca = beer.VAE(\n",
-    "    GaussianMLP(observed_dim, latent_dim1, hidden_dim), \n",
-    "    GaussianMLP(latent_dim1, observed_dim, hidden_dim), \n",
+    "    GaussianMLP(enc_struct, observed_dim, residual=True), \n",
+    "    GaussianMLP(dec_struct, observed_dim, residual=True), \n",
     "    latent_normal, \n",
     "    nsamples=5\n",
     ")"
@@ -151,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 20_000\n",
+    "epochs = 5_000\n",
     "lrate_bayesmodel = 1.\n",
     "lrate_encoder = 1e-3\n",
     "X = torch.from_numpy(data).float()\n",
