Added possibility to comnvert the model to float/double precision and to move them on different devices.

--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -155,10 +155,10 @@
     "hmm_sharedcov_full = beer.HMM.create(init_states, final_states, trans_mat, normalset)\n",
     "\n",
     "models = [\n",
-    "    hmm_diag, \n",
-    "    hmm_full,\n",
-    "    hmm_sharedcov_diag,\n",
-    "    hmm_sharedcov_full\n",
+    "    hmm_diag.double(), \n",
+    "    hmm_full.double(),\n",
+    "    hmm_sharedcov_diag.double(),\n",
+    "    hmm_sharedcov_full.double()\n",
     "]"
    ]
   },
@@ -178,7 +178,7 @@
     "epochs = 30\n",
     "lrate = 1.\n",
     "labels = states\n",
-    "X = torch.from_numpy(data).float()\n",
+    "X = torch.from_numpy(data).double()\n",
     "#Z = torch.from_numpy(labels).long()\n",
     "Z = None\n",
     "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
