--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -227,6 +227,7 @@
     "\n",
     "pldaset = beer.PLDASet.create(mean, prec, noise_s, class_s, means, pseudo_counts)\n",
     "plda = beer.Mixture.create(weights, pldaset)\n",
+    "\n",
     "# ----------------------------------------------------------------------\n",
     "\n",
     "# Putting everything together to build the SVAE.\n",
@@ -252,7 +253,8 @@
     "epochs = 5_000\n",
     "lrate_bayesmodel = 1.\n",
     "lrate_encoder = 1e-3\n",
-    "X = torch.from_numpy(data[:npoints]).float()\n",
+    "X = torch.from_numpy(data[:npoints]).double()\n",
+    "model = model.double()\n",
     "targets = torch.from_numpy(labels[:npoints]).long()\n",
     "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "\n",
