--- a/examples/VAE-PPCA.ipynb
+++ b/examples/VAE-PPCA.ipynb
@@ -144,7 +144,9 @@
     "    GaussianMLP(dec_struct, observed_dim, residual=True), \n",
     "    latent_normal, \n",
     "    nsamples=5\n",
-    ")"
+    ")\n",
+    "\n",
+    "vae_ppca = vae_ppca.double()"
    ]
   },
   {
@@ -156,7 +158,7 @@
     "epochs = 5_000\n",
     "lrate_bayesmodel = 1.\n",
     "lrate_encoder = 1e-3\n",
-    "X = torch.from_numpy(data).float()\n",
+    "X = torch.from_numpy(data).double()\n",
     "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "\n",
     "nnet_parameters = list(vae_ppca.encoder.parameters()) + list(vae_ppca.decoder.parameters())\n",
