Changed the ELBO so we can accumulate it.

--- a/examples/VAE-PPCA.ipynb
+++ b/examples/VAE-PPCA.ipynb
@@ -177,22 +177,12 @@
     "    \n",
     "    if epoch > 0:\n",
     "        elbos.append(float(elbo) / len(X))\n",
-    "        llhs.append(float(elbo.expected_llh) / len(X))\n",
-    "        klds.append(float(elbo.kl_div) / len(X))\n",
     "\n",
     "fig1 = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
     "              y_axis_label='ln p(X)')\n",
     "fig1.line(np.arange(len(elbos)), elbos, color='blue')\n",
     "\n",
-    "fig2 = figure(title='LLH', width=400, height=400, x_axis_label='step',\n",
-    "              y_axis_label='ln p(X)')\n",
-    "fig2.line(np.arange(len(elbos)), llhs, color='green')\n",
-    "\n",
-    "fig3 = figure(title='KL', width=400, height=400, x_axis_label='step',\n",
-    "              y_axis_label='ln p(X)')\n",
-    "fig3.line(np.arange(len(elbos)), klds, color='red')\n",
-    "\n",
-    "show(gridplot([[fig1], [fig2, fig3]]))"
+    "show(fig1)"
    ]
   },
   {
