--- a/examples/VAE.ipynb
+++ b/examples/VAE.ipynb
@@ -199,7 +199,8 @@
     "# For a smooth plot increase the number of samples.\n",
     "vae.nsamples = 100\n",
     "\n",
-    "elbos = elbo_fn(vae, xy).per_frame()\n",
+    "elbos = vae(xy)\n",
+    "elbos -= vae.local_kl_div_posterior_prior()\n",
     "\n",
     "p_x_mtx = elbos.view(single_dim_nb_points,single_dim_nb_points).t().exp()\n",
     "p_x_mtx = p_x_mtx.data.numpy()\n",
