--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -219,13 +219,14 @@
     "# Mean of the prior distributions.\n",
     "mean = torch.zeros(obs_dim)\n",
     "prec = 1.\n",
-    "noise_s = torch.eye(noise_s_dim, obs_dim)\n",
-    "class_s = torch.eye(class_s_dim, obs_dim)\n",
+    "noise_s = torch.zeros(noise_s_dim, obs_dim)\n",
+    "class_s = torch.zeros(class_s_dim, obs_dim)\n",
     "means = torch.zeros(ncomps, class_s_dim)\n",
     "weights = torch.ones(ncomps) / ntargets\n",
     "pseudo_counts = 1.\n",
     "\n",
-    "pldaset = beer.PLDASet.create(mean, prec, noise_s, class_s, means, pseudo_counts)\n",
+    "pldaset = beer.PLDASet.create(mean, prec, noise_s, class_s, means, \n",
+    "                              pseudo_counts, noise_std=0.1)\n",
     "plda = beer.Mixture.create(weights, pldaset)\n",
     "\n",
     "# ----------------------------------------------------------------------\n",
