--- a/examples/VAE-GLC.ipynb
+++ b/examples/VAE-GLC.ipynb
@@ -137,7 +137,7 @@
     "        h = self.nn(X)\n",
     "        mean = self.h2mean(h)\n",
     "        logvar = self.h2logvar(h)\n",
-    "        return beer.NormalDiagonalCovarianceMLP(mean + X, logvar.exp())\n",
+    "        return mean + X, logvar.exp()\n",
     "\n",
     "# Neural network structure of the encoder/decoder of the model.\n",
     "enc_struct = nn.Sequential(\n",
@@ -227,8 +227,8 @@
    "outputs": [],
    "source": [
     "d = 100\n",
-    "enc_state = model.encoder(X[:d])\n",
-    "mean, var = enc_state.mean.data.numpy(), enc_state.var.data.numpy()\n",
+    "mean, var = model.encoder(X[:d])\n",
+    "mean, var = mean.data.numpy(), var.data.numpy()\n",
     "    \n",
     "fig1 = figure(width=400, height=400)\n",
     "for l, m, v in zip(labels[:d], mean, var):\n",
