--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -182,7 +182,7 @@
     "            mean += X\n",
     "        logvar = self.h2logvar(h)\n",
     "        \n",
-    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())\n",
+    "        return mean, logvar.exp()\n",
     "\n",
     "# Neural network structure of the encoder/decoder of the model.\n",
     "enc_struct = nn.Sequential(\n",
@@ -291,8 +291,8 @@
    "outputs": [],
    "source": [
     "d = 200\n",
-    "enc_state = model.encoder(X[:d])\n",
-    "mean, var = enc_state.mean.data.numpy(), enc_state.var.data.numpy()\n",
+    "mean, var = model.encoder(X[:d])\n",
+    "mean, var = mean.data.numpy(), var.data.numpy()\n",
     "fig1 = figure(width=400, height=400)\n",
     "for l, m, v in zip(labels[:d], mean, var):\n",
     "    fig1.circle(m[0], m[1], color=colors[int(l)])\n",
