--- a/examples/VAE-PPCA.ipynb
+++ b/examples/VAE-PPCA.ipynb
@@ -118,7 +118,7 @@
     "            mean += X\n",
     "        logvar = self.h2logvar(h)\n",
     "        \n",
-    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())\n",
+    "        return mean, logvar.exp()\n",
     "\n",
     "    \n",
     "# Neural network structure of the encoder/decoder of the model.\n",
@@ -197,13 +197,13 @@
     "model_cov = S.T @ S + np.identity(2) / model.precision.numpy()\n",
     "\n",
     "def transform(xy):\n",
-    "    dec_state = vae_ppca.decoder(model_mean + torch.from_numpy(xy).float())\n",
-    "    return dec_state.mean.detach().numpy()\n",
+    "    mean, _ = vae_ppca.decoder(model_mean + torch.from_numpy(xy).float())\n",
+    "    return mean.detach().numpy()\n",
     "\n",
     "def transform2(xy):\n",
-    "    dec_state = vae_ppca.decoder(model_mean + torch.from_numpy(xy).float())\n",
-    "    return dec_state.mean.detach().numpy(), \\\n",
-    "        dec_state.var.detach().numpy()\n",
+    "    mean, var = vae_ppca.decoder(model_mean + torch.from_numpy(xy).float())\n",
+    "    return mean.detach().numpy(), \\\n",
+    "        var.detach().numpy()\n",
     "\n",
     "A, B = model.mean.numpy(), model.mean.numpy() + model.subspace.numpy()[0, :]\n",
     "slope = (A[1] - B[1]) / (A[0] - B[0])\n",
@@ -240,8 +240,8 @@
    "outputs": [],
    "source": [
     "model = vae_ppca.latent_model\n",
-    "enc_state = vae_ppca.encoder(X)\n",
-    "means, dcovs = enc_state.mean.detach().numpy(), enc_state.var.detach().numpy()\n",
+    "means, dcovs = vae_ppca.encoder(X)\n",
+    "means, dcovs = means.detach().numpy(), dcovs.detach().numpy()\n",
     "\n",
     "x = np.linspace(-20, 20, 1000)\n",
     "\n",
