--- a/examples/VAE.ipynb
+++ b/examples/VAE.ipynb
@@ -132,7 +132,7 @@
     "        h = F.leaky_relu(self.i2h(X))\n",
     "        mean = self.h2mean(h)\n",
     "        logvar = self.h2logvar(h)\n",
-    "        return beer.NormalDiagonalCovarianceMLP(mean, logvar.exp())"
+    "        return mean, logvar.exp()"
    ]
   },
   {
@@ -182,6 +182,15 @@
     "fig.legend.location = 'bottom_right'\n",
     "\n",
     "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vae(X).shape"
    ]
   },
   {
