Simplified the ELBO function.

--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -181,7 +181,6 @@
     "X = torch.from_numpy(data).double()\n",
     "#Z = torch.from_numpy(labels).long()\n",
     "Z = None\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "params = []\n",
     "for model in models:\n",
     "    params += model.parameters\n",
@@ -191,7 +190,8 @@
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
     "    for i, model in enumerate(models):\n",
-    "        elbo = elbo_fn(model, X, Z)\n",
+    "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X), \n",
+    "                                         state_path=Z)\n",
     "        elbo.natural_backward()\n",
     "        elbos[i].append(float(elbo) / len(X))\n",
     "    optimizer.step()\n",
