--- a/examples/Mixture Model.ipynb
+++ b/examples/Mixture Model.ipynb
@@ -161,7 +161,6 @@
     "epochs = 100\n",
     "lrate = 1.\n",
     "X = torch.from_numpy(data).float()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "params = []\n",
     "for model in models:\n",
     "    params += model.parameters\n",
@@ -171,7 +170,7 @@
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
     "    for i, model in enumerate(models):\n",
-    "        elbo = elbo_fn(model, X)\n",
+    "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X))\n",
     "        elbo.natural_backward()\n",
     "        if epoch > 0:\n",
     "            elbos[i].append(float(elbo) / len(X))\n",
