--- a/examples/Normal.ipynb
+++ b/examples/Normal.ipynb
@@ -111,7 +111,6 @@
     "epochs = 1\n",
     "lrate = 1\n",
     "X = torch.from_numpy(data).float()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "params = normal_diag.parameters + normal_full.parameters\n",
     "models = [normal_diag, normal_full]\n",
     "optimizer = beer.BayesianModelOptimizer(params, lrate)\n",
@@ -119,7 +118,7 @@
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
     "    for model in models:\n",
-    "        elbo = elbo_fn(model, X)\n",
+    "        elbo = beer.evidence_lower_bound(model, X)\n",
     "        elbo.natural_backward()\n",
     "    optimizer.step()"
    ]
