--- a/examples/PLDA.ipynb
+++ b/examples/PLDA.ipynb
@@ -168,7 +168,6 @@
     "plda = plda.float()\n",
     "X = torch.from_numpy(data).float()\n",
     "targets = torch.from_numpy(labels).long()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "optimizer = beer.BayesianModelCoordinateAscentOptimizer(\n",
     "    *plda.grouped_parameters, \n",
     "    lrate=lrate\n",
@@ -177,7 +176,7 @@
     "elbos = []\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
-    "    elbo = elbo_fn(plda, X, targets)\n",
+    "    elbo = beer.evidence_lower_bound(plda, X, datasize=len(X), labels=targets)\n",
     "    elbo.natural_backward()\n",
     "    optimizer.step()\n",
     "    \n",
@@ -191,15 +190,6 @@
     "fig.line(np.arange(len(elbos)), elbos, color='blue')\n",
     "\n",
     "show(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.zeros(2, dtype=mean.dtype)"
    ]
   },
   {
