--- a/examples/PPCA.ipynb
+++ b/examples/PPCA.ipynb
@@ -115,7 +115,6 @@
     "epochs = 30\n",
     "lrate = 1\n",
     "X = torch.from_numpy(data).double()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "optim = beer.BayesianModelOptimizer(parameters)\n",
     "    \n",
     "elbos = [[], [], []]\n",
@@ -123,7 +122,7 @@
     "for epoch in range(epochs):\n",
     "    optim.zero_grad()\n",
     "    for i, model in enumerate(models):\n",
-    "        elbo = elbo_fn(model, X)\n",
+    "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X))\n",
     "        elbo.natural_backward()\n",
     "        elbos[i].append(round(float(elbo) / len(X), 5))\n",
     "    optim.step()\n",
