--- a/examples/VAE-GLC.ipynb
+++ b/examples/VAE-GLC.ipynb
@@ -194,7 +194,6 @@
     "lrate_encoder = 1e-3\n",
     "X = torch.from_numpy(data[:npoints]).float()\n",
     "targets = torch.from_numpy(labels[:npoints]).long()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "\n",
     "nnet_parameters = list(model.encoder.parameters()) + list(model.decoder.parameters())\n",
     "std_optimizer = torch.optim.Adam(nnet_parameters, lr=lrate_encoder, weight_decay=1e-2)\n",
@@ -204,7 +203,7 @@
     "    \n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
-    "    elbo = elbo_fn(model, Variable(X), Variable(targets))\n",
+    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), labels=targets)\n",
     "    elbo.backward()\n",
     "    elbo.natural_backward()\n",
     "    optimizer.step()\n",
