--- a/examples/VAE-PPCA.ipynb
+++ b/examples/VAE-PPCA.ipynb
@@ -159,7 +159,6 @@
     "lrate_bayesmodel = 1.\n",
     "lrate_encoder = 1e-3\n",
     "X = torch.from_numpy(data).double()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "\n",
     "nnet_parameters = list(vae_ppca.encoder.parameters()) + list(vae_ppca.decoder.parameters())\n",
     "std_optimizer = torch.optim.Adam(nnet_parameters, lr=lrate_encoder, weight_decay=1e-2)\n",
@@ -170,7 +169,7 @@
     "elbos, klds, llhs = [], [], []\n",
     "for epoch in range(epochs):\n",
     "    optim.zero_grad()\n",
-    "    elbo = elbo_fn(vae_ppca, X)\n",
+    "    elbo = beer.evidence_lower_bound(vae_ppca, X, datasize=len(X))\n",
     "    elbo.backward()\n",
     "    elbo.natural_backward()\n",
     "    optim.step()\n",
