--- a/examples/VAE-PLDA.ipynb
+++ b/examples/VAE-PLDA.ipynb
@@ -257,7 +257,6 @@
     "X = torch.from_numpy(data[:npoints]).double()\n",
     "model = model.double()\n",
     "targets = torch.from_numpy(labels[:npoints]).long()\n",
-    "elbo_fn = beer.EvidenceLowerBound(len(X))\n",
     "\n",
     "nnet_parameters = list(model.encoder.parameters()) + list(model.decoder.parameters())\n",
     "std_optimizer = torch.optim.Adam(nnet_parameters, lr=lrate_encoder, weight_decay=1e-2)\n",
@@ -268,7 +267,7 @@
     "elbos = []\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
-    "    elbo = elbo_fn(model, X, targets)\n",
+    "    elbo = beer.evidence_lower_bound(model, X, datasize=len(X), labels=targets)\n",
     "    elbo.backward()\n",
     "    elbo.natural_backward()\n",
     "    optimizer.step()\n",
