Added Normal with isotropic covariance matrix.

--- a/examples/Mixture Model.ipynb
+++ b/examples/Mixture Model.ipynb
@@ -115,6 +115,11 @@
     "# Mean of the weights' prior.\n",
     "weights = torch.ones(ncomp) / ncomp\n",
     "\n",
+    "# GMM (isotropic cov).\n",
+    "normalset = beer.NormalIsotropicCovarianceSet.create(p_mean, torch.diag(p_cov).sum(), \n",
+    "                                                     ncomp, noise_std=0.1)\n",
+    "gmm_iso = beer.Mixture.create(weights, normalset)\n",
+    "\n",
     "# GMM (diag cov).\n",
     "normalset = beer.NormalDiagonalCovarianceSet.create(p_mean, torch.diag(p_cov), \n",
     "                                                    ncomp, noise_std=0.1)\n",
@@ -138,6 +143,7 @@
     "gmm_sharedcov_full = beer.Mixture.create(weights, normalset)\n",
     "\n",
     "models = [\n",
+    "    gmm_iso,\n",
     "    gmm_diag, \n",
     "    gmm_full,\n",
     "    gmm_sharedcov_diag,\n",
@@ -166,7 +172,7 @@
     "    params += model.parameters\n",
     "optimizer = beer.BayesianModelOptimizer(params, lrate)\n",
     "    \n",
-    "elbos = [[], [], [], []]\n",
+    "elbos = [[] for model in models]\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
     "    for i, model in enumerate(models):\n",
@@ -179,10 +185,11 @@
     "# Plot the ELBO.\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
     "              y_axis_label='ln p(X)')\n",
-    "fig.line(range(1, epochs), elbos[0], legend='GMM (diag)', color='blue')\n",
-    "fig.line(range(1, epochs), elbos[1], legend='GMM (full)', color='red')\n",
-    "fig.line(range(1, epochs), elbos[2], legend='GMM (shared cov. diag)', color='green')\n",
-    "fig.line(range(1, epochs), elbos[3], legend='GMM (shared cov. full)', color='black')\n",
+    "fig.line(range(1, epochs), elbos[0], legend='GMM (iso)', color='orange')\n",
+    "fig.line(range(1, epochs), elbos[1], legend='GMM (diag)', color='blue')\n",
+    "fig.line(range(1, epochs), elbos[2], legend='GMM (full)', color='red')\n",
+    "fig.line(range(1, epochs), elbos[3], legend='GMM (shared cov. diag)', color='green')\n",
+    "fig.line(range(1, epochs), elbos[4], legend='GMM (shared cov. full)', color='black')\n",
     "fig.legend.location = 'bottom_right'\n",
     "\n",
     "show(fig)"
@@ -196,6 +203,11 @@
    },
    "outputs": [],
    "source": [
+    "fig0 = figure(title='GMM (iso)', x_range=global_range, y_range=global_range,\n",
+    "              width=400, height=400)\n",
+    "fig0.circle(data[:, 0], data[:, 1], alpha=.1)\n",
+    "plotting.plot_gmm(fig0, gmm_iso, alpha=.5, color='orange')\n",
+    "\n",
     "fig1 = figure(title='GMM (diag)', x_range=global_range, y_range=global_range,\n",
     "              width=400, height=400)\n",
     "fig1.circle(data[:, 0], data[:, 1], alpha=.1)\n",
@@ -216,7 +228,7 @@
     "fig4.circle(data[:, 0], data[:, 1], alpha=.1)\n",
     "plotting.plot_gmm(fig4, gmm_sharedcov_full, alpha=.5, color='black')\n",
     "\n",
-    "grid = gridplot([[fig1, fig2], [fig3, fig4]])\n",
+    "grid = gridplot([[fig0, fig1], [fig2, fig3], [fig4]])\n",
     "show(grid)"
    ]
   }
